# bounce-core

./: .gitignore  Cargo.toml  README.md  config-local.toml  config-sat-test.toml  config-utah.toml  config-wisc-clem.toml  config-wisc-econ.toml  config-wisc-prem.toml  config.toml  key_gen_batch.sh
accumulator/Accumulator/Accumulator/: Accumulator.csproj  Program.cs  StoreTest.cs
accumulator/Accumulator/Accumulator/Utils/: GrpcUtils.cs  PartitionUtils.cs
accumulator/Accumulator/Accumulator/Wallet/: Wallet.cs
accumulator/Accumulator/Accumulator/gRPC/: WalletServiceImpl.cs  wallet.proto
bls/: Cargo.toml
bls/benches/: bls.rs  ecc.rs  pop.rs
bls/src/: basic.rs  lib.rs  message_augmentation.rs  min_pk.rs  min_sig.rs  proof_of_possession.rs
bls/tests/: pop.rs
bounce-core/: Cargo.toml  build.rs  config.toml
bounce-core/proto/: message.proto
bounce-core/src/: common.rs  config.rs  gs.rs  gs_mktree_handler.rs  lib.rs  mc.rs  sat.rs  ss.rs  ss_client_txs_receiver.rs  ss_mktree_handler.rs  storage_service.rs  types.rs
distributed-timming-tests/: Cargo.toml
distributed-timming-tests/src/: dataloader.rs  signmktrequest.rs  signmktrequest_tiled.rs
key-manager/: Cargo.toml
key-manager/src/: keygen.rs  keyloader.rs  lib.rs
keys/min_pk/: gs00.public.key  gs00.secret.key  gs01.public.key  gs01.secret.key  gs02.public.key  gs02.secret.key  gs03.public.key  gs03.secret.key  gs04.public.key  gs04.secret.key  gs05.public.key  gs05.secret.key  gs06.public.key  gs06.secret.key  gs07.public.key  gs07.secret.key  gs08.public.key  gs08.secret.key  gs09.public.key  gs09.secret.key  gs10.public.key  gs10.secret.key  gs11.public.key  gs11.secret.key  gs12.public.key  gs12.secret.key  gs13.public.key  gs13.secret.key  gs14.public.key  gs14.secret.key  gs15.public.key  gs15.secret.key  gs16.public.key  gs16.secret.key  gs17.public.key  gs17.secret.key  gs18.public.key  gs18.secret.key  gs19.public.key  gs19.secret.key  (+90 more)
local-timming-tests/: Cargo.toml
local-timming-tests/src/: mktconstruct.rs
proto/: message.proto
receiving_time_plot/: python_plot_gs_responses_box.py  python_plot_gs_responses_box_multibench.py  python_plot_gs_responses_tiled.py  python_plot_gs_responses_tiled_box.py  python_plot_gs_responses_tiled_box_2.py  receiving_time_elapsed_100_benchmarks.json  receiving_time_elapsed_100_benchmarks_sorted.json  receiving_time_elapsed_100k.json  receiving_time_elapsed_1m.json  receiving_time_elapsed_500k.json  receiving_time_elapsed_tiled.json  sending_time_stamp.json
services/: Cargo.toml
services/src/: accumulator.rs  db.rs
slot-clock/: Cargo.toml
slot-clock/src/: lib.rs
src/: config.rs  gs.rs  mc.rs  sat.rs  ss.rs
