[workspace]
members = [
    "bounce-core",
    "bls",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
blst = "0.3.11"
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.29"
keccak-hash = { version = "0.11.0" }
proptest = "1.3.1"
proptest-derive = "0.5.0"
rand = "0.8.5"
rkyv = "0.8.8"
serde = { version = "1.0", features = ["derive"] }

# dev-dependencies
criterion = "0.5.1"
hex = "0.4.3"
