[package]
name = "bounce-core"
version = "0.1.0"
authors = ["Xiaoteng (Frank) Liu <xiaoteng.liu@nyu.edu>"]
edition = "2021"

[dependencies]
bls = { path = "../bls", features = ["proptest"] }
bincode = { workspace = true }
keccak-hash = { workspace = true }
key-manager = { path = "../key-manager" }
log = { workspace = true }
prost = "0.13.3"
rand = { workspace = true }
rayon = { workspace = true }
rkyv = { workspace = true }
rs_merkle = { workspace = true }
serde = { workspace = true }
slot-clock = { path = "../slot-clock" }
tonic = "0.12.3"
tokio = { workspace = true }
toml = "0.8.19"


zstd = "0.13.2"

[build-dependencies]
prost-build = "0.13.3"
tonic-build = "0.12.3"

[[bin]]
name = "ss"
path = "src/ss.rs"

[[bin]]
name = "gs"
path = "src/gs.rs"

[[bin]]
name = "sat"
path = "src/sat.rs"

[[bin]]
name = "mc"
path = "src/mc.rs"
