[package]
name = "slot-clock"
version = "0.1.0"
authors = ["Taegyun Kim <k.taegyun@gmail.com>", "Xiaoteng (Frank) Liu <xiaoteng.liu@nyu.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
tokio = { workspace = true }
